2002-04-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-arrived-modify): New function.
	(w3m-local-attributes): If set Content-type in arrived DB, return
	it.
	(w3m-redisplay-this-page, w3m-redisplay-and-reset) 
	(w3m-redisplay-with-content-type): New commands.
	(w3m-redisplay-with-charset): Use `w3m-arrived-modify'.
	(w3m-lynx-like-map): Bind all new commands and modify bind for
	`w3m-redisplay-with-charset'.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Document them.
	(w3m-goto-url): If reload is 'redisplay, do redisplay only. Modify
	content-type decided method at local URL.
	(w3m-about-header): Display `Modifer Information'.
	(w3m-header-line-insert): Display modifers when type are setting.

2002-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-horizontal-recenter): New command.
	(w3m-beginning-of-line): New command.
	(w3m-end-of-line): New command.
	(w3m-lynx-like-map): Bind them.
	(w3m-info-like-map): Bind them.
	(w3m-mode): Document them.

2002-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-face-inherit): Default to t.

	* w3m-om.el (w3m-om-use-overstrike-to-make-face-bold): New var.
	(custom-declare-face): Advise it to use `set-face-bold-p' to make
	faces bold by overstriking.

	* w3m-util.el (w3m-default-face-colors): New constant.
	* w3m.el (w3m-bold-face, w3m-underline-face): Use it.

2002-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-insert): Don't put the
	transparent face except for Emacs 20.

	* w3m.el (w3m-key-binding): Don't manipulate key bindings if
	w3m.elc has not been loaded (it will fix the problem that the face
	colors might not be specified under Mule 2).

2002-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-transparent-face): Remove.
	(w3m-bitmap-image-insert): Use the list form instead of
	`w3m-bitmap-transparent-face' to make the overlay transparent.

2002-04-23  Hideyuki SHIRAI  <shirai@meadowy.org>
