@@ -1,3 +1,7 @@
+2002-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el: Check for the validity on APEL.
+
 2002-04-26  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-arrived-modify): New function.
